--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,9 @@
 		{% block stylesheets %}{% endblock %}
 	</head>
 	<body>
-		{% block body %}{% endblock %}
+		{% block body %}
+			<p>hello</p>
+		{% endblock %}
 		{% block javascripts %}{% endblock %}
 	</body>
 </html>
